# autoviron

./: .autovironrc.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py  test_autoviron.py
autoviron/: __init__.py  cli.py
autoviron/config/: default_config.json
autoviron/core/: ai.py  config.py  deps.py  detector.py  env_manager.py  execution.py  explainer.py  failure_db.py  learning.py
autoviron/doctor/: diagnostics.py
autoviron/plugins/: base.py
autoviron/plugins/builtin/: __init__.py  django.py  fastapi.py  ml.py
autoviron/shell/: bash.sh  hooks.py  powershell.ps1
autoviron/ux/: console.py
examples/: demo_script.py
shell/: fish.fish  powershell.ps1  zsh.sh
tests/: __init__.py  test_deps.py  test_failure_db.py
